--- a/server/pyproject.toml
+++ b/server/pyproject.toml
@@ -8,6 +8,7 @@ authors = ["awalvie <agrawal.vishesh.178@gmail.com>"]
 python = "^3.8"
 flask = "^1.1.2"
 python-dotenv = "^0.15.0"
+flask-socketio = "^4.3.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
