--- a/server/pyproject.toml
+++ b/server/pyproject.toml
@@ -9,6 +9,7 @@ python = "^3.8"
 flask = "^1.1.2"
 python-dotenv = "^0.15.0"
 flask-socketio = "^4.3.1"
+Flask-Cors = "^3.0.9"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
