[server] lots of changes
- add routes for connect, disconnect and init
- add classes for active_players and players

--- a/server/.gitignore
+++ b/server/.gitignore
@@ -1,5 +1,5 @@
 __pycache__
-.vscode/
+.vscode/*
 
 # Created by https://www.toptal.com/developers/gitignore/api/flask
 # Edit at https://www.toptal.com/developers/gitignore?templates=flask
