--- a/client/package.json
+++ b/client/package.json
@@ -7,7 +7,9 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "date-fns": "^2.16.1",
     "keyboardjs": "^2.6.4",
+    "moment": "^2.29.1",
     "pixi.js": "^5.3.3",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
