--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "date-fns": "^2.16.1",
     "keyboardjs": "^2.6.4",
     "moment": "^2.29.1",
+    "peerjs": "^1.3.1",
     "pixi.js": "^5.3.3",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
